Working on issue #70
Testing with IE9:
- fixed minor layout issues with IE9
- Fixed missing properties on api-key
- Fixed some input tags that weren’t terminated

Its still missing some fixes, namely, adding terminators on input tags on the questionnaires that give error on ie9, and also trimming questions (some of them are not trimmed) and ie9 gives errors.

--- a/emif/emif/static/css/main.css
+++ b/emif/emif/static/css/main.css
@@ -222,3 +222,13 @@ clear: both;
 .green {
     color: green;
 }
+
+.lt-ie9 .db_logo, .ie9 .db_logo {
+    width: 50px;
+}
+
+.ie9 #search_li {
+
+list-style-type: none;
+    
+}
